# ocaml-tensorflow-eager

./: .gitignore  Makefile  README.md  tf.install  tf.opam
examples/: gradients.ml  hello_world.ml  imagenet_helper.ml  imagenet_helper.mli  jbuild  resnet50.ml  variable.ml  vgg19.ml
examples/mnist/: convnet.ml  helper.ml  helper.mli  jbuild  linear.ml  mlp.ml
src/gen_ops/: gen.ml  jbuild  op_def_piqi.ml
src/ops/: generated.ml  generated.mli  gradients.ml  gradients.mli  jbuild  op.ml  op.mli  ops.ml  ops.mli  ops_gradients.ml  ops_gradients.mli  var.ml  var.mli
src/stubs/: tf_bindings.ml  tf_gen.ml
src/wrapper/: eager.ml  eager.mli  eager_c_api.h  jbuild  operation.ml  operation.mli  tensor.ml  tensor.mli  wrapper.ml  wrapper.mli
